// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`divider snapshot tests <Divider />: propsなし 1`] = `
<View
  style={
    Array [
      Object {
        "display": "flex",
        "justifyContent": "center",
        "paddingHorizontal": 10,
        "textAlign": "center",
        "width": "100%",
      },
      undefined,
    ]
  }
>
  <Text
    style={
      Object {
        "backgroundColor": "#707070",
        "height": 1,
        "width": "100%",
      }
    }
  />
</View>
`;

exports[`divider snapshot tests <Divider height="large"/>: サイズlarge 1`] = `
<View
  style={
    Array [
      Object {
        "display": "flex",
        "justifyContent": "center",
        "paddingHorizontal": 10,
        "textAlign": "center",
        "width": "100%",
      },
      Object {
        "height": 100,
      },
    ]
  }
>
  <Text
    style={
      Object {
        "backgroundColor": "#707070",
        "height": 1,
        "width": "100%",
      }
    }
  />
</View>
`;

exports[`divider snapshot tests <Divider height="middle"/>: サイズmiddle 1`] = `
<View
  style={
    Array [
      Object {
        "display": "flex",
        "justifyContent": "center",
        "paddingHorizontal": 10,
        "textAlign": "center",
        "width": "100%",
      },
      Object {
        "height": 50,
      },
    ]
  }
>
  <Text
    style={
      Object {
        "backgroundColor": "#707070",
        "height": 1,
        "width": "100%",
      }
    }
  />
</View>
`;

exports[`divider snapshot tests <Divider height="small"/>: サイズsmall 1`] = `
<View
  style={
    Array [
      Object {
        "display": "flex",
        "justifyContent": "center",
        "paddingHorizontal": 10,
        "textAlign": "center",
        "width": "100%",
      },
      Object {
        "height": 20,
      },
    ]
  }
>
  <Text
    style={
      Object {
        "backgroundColor": "#707070",
        "height": 1,
        "width": "100%",
      }
    }
  />
</View>
`;
